# gest-ashoex-backend/app/Http/Controllers/GrupoController.php
@@ -1,28 +1,40 @@
 <?php
 
 namespace App\Http\Controllers;
-
-use Illuminate\Http\Request;
+use App\Http\Requests\GrupoRequest;
 use App\Models\Grupo;
+use Illuminate\Database\QueryException; // Para capturar errores de base de datos.
+use Illuminate\Http\Response;
 
-class GrupoController extends Controller
-{
-
+class GrupoController extends Controller{
     public function index()
     {
         $grupos = Grupo::all();
        return response()->json($grupos,200);
     }
 
-    public function store(Request $request)
+    public function store(GrupoRequest $request)
     {
-        $datos = $request->validate([
-            'materia_id' =>'required',
-            'nro_grupo' => 'required',
-        ]);
-        $grupo = new Grupo($datos);
-        $grupo->save();
-        return response()->json($grupo,201);
+        try {
+            // Crear un nuevo grupo con los datos validados
+            $grupo = new Grupo($request->validated());
+            $grupo->save();
+
+            // Responder con el grupo creado y código 201 (Creado)
+            return response()->json($grupo, Response::HTTP_CREATED);
+        } catch (QueryException $e) {
+            // Código SQL 23000 se refiere a violaciones de integridad como duplicados
+            if ($e->getCode() === '23000') {
+                return response()->json([
+                    'message' => 'Error: Ya existe un grupo con este número para la materia seleccionada.',
+                ], Response::HTTP_CONFLICT); // Código 409: Conflicto
+            }
+
+            // Manejo de otros errores generales
+            return response()->json([
+                'message' => 'Error al crear el grupo.',
+            ], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
     }
 
     /**
@@ -38,21 +50,15 @@ class GrupoController extends Controller
     /**
      * Update the specified resource in storage.
      */
-    public function update(Request $request, string $id)
+    public function update(GrupoRequest $request, string $id)
     {
         $grupo = Grupo::find($id);
         if (!$grupo) {
             return response()->json(['error' => 'Grupo no encontrado'], 404);
         }
 
-        // Validación de los datos
-        $datos = $request->validate([
-            'materia_id' => 'required',
-            'nro_grupo' => 'required',
-        ]);
-
-        // Actualizar el grupo con los datos validados
-        $grupo->update($datos);
+        // Actualiza el grupo con los datos validados
+        $grupo->update($request->validated());
 
         return response()->json([
             'success' => true,
