# gest-ashoex-backend/storage/api-docs/api-docs.json
@@ -6,6 +6,216 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/grupo": {
+            "get": {
+                "tags": ["Grupo"],
+                "summary": "Obtener lista de grupos",
+                "operationId": "470f68cef0c2e0c921e746cc90766f82",
+                "responses": {
+                    "200": {
+                        "description": "Obtener lista de grupos",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "id_materia": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "nro_grupo": {
+                                                "type": "integer",
+                                                "example": "9"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": ["Grupo"],
+                "summary": "Crear un nuevo grupo, la materia del id debe existir obligatoriamente",
+                "operationId": "createGrupo",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "materia_id": {
+                                        "type": "integer",
+                                        "description": "ID de la materia",
+                                        "example": 1
+                                    },
+                                    "nro_grupo": {
+                                        "type": "integer",
+                                        "description": "Número del grupo",
+                                        "example": 9
+                                    }
+                                },
+                                "required": ["id_materia", "nro_grupo"]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Grupo creado exitosamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "materia_id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "nro_grupo": {
+                                            "type": "integer",
+                                            "example": 9
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2024-10-12T10:00:00Z"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Solicitud inválida. Datos faltantes o incorrectos"
+                    },
+                    "500": {
+                        "description": "Error del servidor al intentar crear el grupo"
+                    }
+                }
+            }
+        },
+        "/api/grupo/{id}": {
+            "put": {
+                "tags": ["Grupo"],
+                "summary": "Actualizar un grupo ya existente",
+                "operationId": "updateGrupo",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "description": "ID del grupo a actualizar"
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "id_materia": {
+                                        "type": "integer",
+                                        "description": "ID de la materia",
+                                        "example": 1
+                                    },
+                                    "nro_grupo": {
+                                        "type": "integer",
+                                        "description": "Número del grupo",
+                                        "example": 9
+                                    }
+                                },
+                                "required": ["id_materia", "nro_grupo"]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Grupo actualizado exitosamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "id_materia": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "nro_grupo": {
+                                            "type": "integer",
+                                            "example": 9
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2024-10-12T12:00:00Z"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Grupo no encontrado"
+                    },
+                    "400": {
+                        "description": "Solicitud inválida. Datos faltantes o incorrectos"
+                    },
+                    "500": {
+                        "description": "Error del servidor al intentar actualizar el grupo"
+                    }
+                }
+            },
+            "delete": {
+                "tags": ["Grupo"],
+                "summary": "Eliminar un grupo existente",
+                "operationId": "deleteGrupo",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "description": "ID del grupo a eliminar"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Grupo eliminado exitosamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Grupo no encontrado"
+                    },
+                    "500": {
+                        "description": "Error del servidor al intentar eliminar el grupo"
+                    }
+                }
+            }
+        },
         "/api/health": {
             "get": {
                 "tags": [
@@ -50,6 +260,10 @@
         {
             "name": "Health Check",
             "description": "Health Check"
+        },
+        {
+            "name": "Grupo",
+            "description": "Endpoints relacionados con la gestión de grupos"
         }
     ]
 }
